src/app/pages/my-car/my-car.page.scss
@use "../../shared/scss/effects" as *;

.car-card-container {
  padding: 0;
  background: linear-gradient(160deg, #bebebe 0%, rgb(0 0 0) 55%);
}

.car-card-img {
  height: auto;
  width: 100%;
  max-width: 15rem;
  margin: 0 auto 0 auto;
}

.car-title {
  font-size: 1.8rem;
  letter-spacing: 4px;
  font-weight: 900;
  text-transform: uppercase;
  color: var(--ion-color-secondary);
  margin: 0;
}

.car-model-name-box {
  position: relative;
  z-index: 999;
}

.car-divider {
  width: 100%;
  height: 4.5rem;
  margin: -1.7rem 1rem;
  border-top: 5px solid var(--ion-color-secondary);
  border-radius: 50%;
  transform: rotate(180deg);
  background: radial-gradient(circle, rgb(79 79 79) 0%, rgb(28 28 28) 80%);
}

.my-car-brand {
  width: auto;
  height: 100%;
  max-height: 4rem;
  margin-top: 3rem;
}

.car-model-name {
  font-size: 1rem;
  letter-spacing: 2px;
  font-weight: 500;
  text-transform: uppercase;
  color: var(--ion-color-secondary);
}

.car-info-container {
  padding: 1rem;
  background-color: #bebebe21;
  margin: 2rem;
  border-radius: 1rem;
  box-shadow: 0 0 15px -3px var(--ion-color-secondary);
  & p {
    font-size: 0.8rem;
    letter-spacing: 1px;
    font-weight: 500;
    color: var(--ion-color-secondary);
  }
}

